campo 'change' adicionado

--- a/methods_praticaAPI/index.html
+++ b/methods_praticaAPI/index.html
@@ -29,6 +29,7 @@
     <p>Company Name: {{ apiJson.companyName }}</p>
     <p>Stock Symbol: {{ apiJson.symbol }}</p>
     <p>Latest Price: {{ apiJson.latestPrice }}</p>
+    <p>Change: {{ apiJson.change }}</p>
     <p>Latest Time: {{ apiJson.latestTime }}</p>
     <button @click="getApi()">Gerar Json</button>
   </div>
